# citrus

./: .gitignore  LICENSE  Makefile.am  Makefile.in  PluginUsage.md  README.md  autogen.sh  citrus.pc.in  config.h.in  configure.ac  lemon.c  lempar.c  lempar.h  version.h.in
CitrusPlugin/: CitrusPlugin.h  CitrusPlugin.m  Info.plist  Lemon.pbfilespec  Lemon.strings  Lemon.xcspec  NSObject_Extension.h  NSObject_Extension.m
CitrusPlugin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CitrusPlugin.xcodeproj/project.xcworkspace/xcshareddata/: CitrusPlugin.xccheckout
CitrusPlugin.xcodeproj/xcshareddata/xcschemes/: CitrusPlugin.xcscheme  Lemon Setup.xcscheme  Lemon.xcscheme
